tests/istio/istio/overlays/https-gateway/test_data/expected/rbac.istio.io_v1alpha1_clusterrbacconfig_default.yaml
apiVersion: rbac.istio.io/v1alpha1
kind: ClusterRbacConfig
metadata:
  name: default
  namespace: kubeflow
spec:
  exclusion:
    namespaces:
    - istio-system
  mode: ON_WITH_EXCLUSION
