tests/istio/istio/overlays/https-gateway/test_data/expected/~g_v1_configmap_istio-parameters-cm9hckfgmb.yaml
apiVersion: v1
data:
  clusterRbacConfig: ON_WITH_EXCLUSION
  gatewaySelector: ingressgateway
kind: ConfigMap
metadata:
  annotations: {}
  labels: {}
  name: istio-parameters-cm9hckfgmb
  namespace: kubeflow
